--- a/templates/sortie/show.html.twig
+++ b/templates/sortie/show.html.twig
@@ -201,7 +201,7 @@
                             </form>
                         {% endif %}
 
-                        {% if isOrganisateur and sortie.state.value in ['Créée', 'Ouverte'] %}
+                        {% if isOrganisateur or is_granted('ROLE_ADMIN') and sortie.state.value in ['Créée', 'Ouverte'] %}
                             <a href="{{ path('app_sortie_cancel', {id: sortie.id}) }}"
                                class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-lg text-white bg-gradient-to-r from-red-500 to-red-600 hover:from-red-600 hover:to-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 shadow-md hover:shadow-lg transform hover:-translate-y-0.5 transition-all duration-200">
                                 <svg class="w-4 h-4 mr-2" stroke="currentColor" viewBox="0 0 24 24">
